Add resource types that have been added since creating the cache db

BUG:442783